php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47329 Crash in garbage collector
Submitted: 2009-02-06 12:10 UTC Modified: 2009-02-09 10:47 UTC
From: kore@php.net Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5.3.0beta1 OS: Linux 2.6.28-gentoo-r1
Private report: No CVE-ID: None
 [2009-02-06 12:10 UTC] kore@php.net
Description:
------------
The execution of the test script crashes with:

$ php trigger_bug.php 
/home/kore/local/bin/php/php-5.3-cvs/php-src/Zend/zend_hash.c(668) : ht=0x9842a70 is being destroyed

When garbage collector is disabled, the code works as expected (but takes a while):

$ php -dzend.enable_gc=0 trigger_bug.php 

ezcDocumentParserException: Parse error: Fatal error: 'Unexpected node: Title.' in line 2656 at position 1.
[...]

The error seems to only occur on 32bit systems.


Reproduce code:
---------------
The issue only occurs with "big" parsed text documents, so that there is no small reproducing case - a full self contained reproducing case can be found here: http://k023.de/gc_bug.tar.bz2 (155KB).

Switch into the directory "gc_bug" and run "php trigger_bug.php".


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-02-06 12:11 UTC] derick@php.net
Assigning this to Dmitry, we've discussed this briefly on IM.
 [2009-02-09 10:47 UTC] dmitry@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC