Fixed bug #47329 (Crash in garbage collector)